<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/startW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startT" />

        <Button
            android:id="@+id/opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optT" />

        <Button
            android:id="@+id/cmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmpT" />

    </LinearLayout>

</LinearLayout>